# rust-software-engineering-roadmap

./: .gitignore  Cargo.toml  README.md
RSE_000_Rust_Basics/: RS_01_variables_and_mutability.rs  RS_02_scalar_types.rs  RS_03_compound_types.rs  RS_04_ownership.rs  RS_05_borrowing_and_references.rs  RS_06_string_types.rs  RS_07_scope_and_shadowing.rs
RSE_010_Functions/: FN_01_basic_functions.rs  FN_02_closures.rs  FN_03_iterator_basics.rs  FN_04_function_pointers.rs  FN_05_closures_as_parameters.rs  FN_06_higher_order_functions.rs
RSE_020_Control_Flow/: CF_01_if_expressions.rs  CF_02_pattern_matching.rs  CF_03_if_let.rs  CF_04_while_let.rs  CF_05_loop_expressions.rs  CF_06_iterator_adapters.rs
RSE_030_Data_Structures/: DS_01_structs.rs  DS_02_enums.rs  DS_03_tuples.rs  DS_04_vectors.rs  DS_05_hashmaps.rs  DS_06_hashsets.rs
RSE_040_Error_Handling/: EH_01_result.rs  EH_02_option.rs  EH_03_custom_errors.rs  EH_04_panic_and_unwrap.rs
